@@ -5,6 +5,17 @@ Changes
 
 - Renamed `error_handler` to `parse_error_handler`
 
+- The `json_input_handler` and `parse_error_handler` event notification
+  methods now take a `parsing_context` value rather than a const reference.
+
+- Static singleton `instance` methods have been added to `default_parse_error_handler`
+  and `empty_json_input_handler`. 
+
+New features
+
+- Added to the `json` class overloaded static methods parse, parse_string 
+  and parse_file that take a `parse_error_handler` as a parameter. 
+
 0.95
 ----
 
